fix: :bug: Fixed issue with 10.9 not displaying backdrop behind item logo

--- a/CSS/css-scyfin/scyfin-theme.css
+++ b/CSS/css-scyfin/scyfin-theme.css
@@ -146,15 +146,11 @@
     color: rgb(33, 149, 243) !important;
 }
 
-
-
 /* Modified background color */
-.backgroundContainer,
 .dialog,
 html {
     background-color: #0F0F0F !important;
 }
-
 
 
 /* Transparent header bar */
